update all apps commit